asset/style/main.css
/* Normalize css code */
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}

body {
  line-height: 1;
}

ol,
ul {
  list-style: none;
}

blockquote,
q {
  quotes: none;
}

blockquote::before,
blockquote::after,
q::before,
q::after {
  content: "";
  content: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* My Style section  */
.main-page {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

/* Navbar styles */
.header {
  padding: 24px;
  width: 100%;
  display: flex;
  flex-direction: row;
  align-content: center;
  justify-content: space-between;
  position: fixed;
  top: 0;
}

.logo > img {
  flex-grow: 1;
  height: 60px;
}

nav {
  flex-grow: 2;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
}

.nav-menu {
  display: flex;
  flex-direction: row;
}

.menu-icon {
  visibility: hidden;
  margin-right: 24px;
}

.nav-link {
  padding: 10px 12px;
  font-family:

    Inter,
    sans-serif;
  text-decoration: none;
  font-weight: 600;
  font-size: 15px;
  line-height: 20px;
  text-align: center;
  color: #344563;
}

/* Home section style */
#home-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 160px 0;
  background-image: url("https://i.postimg.cc/rmSQD83K/headerbg.png");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

.header-title {
  font-family:

    Inter,
    sans-serif;
  font-weight: 800;
  font-size: 48px;
  font-style: normal;
  line-height: 60px;
  text-align: center;
  letter-spacing: 0.37px;
  color: #172b4d;
}

.green-text {
  margin-bottom: 24px;
  color: #36b37e;
}

.header-text {
  padding: 0 15%;
  font-family:
    Inter,
    sans-serif;
  font-size: 20px;
  font-weight: 400;
  font-style: normal;
  line-height: 32px;
  text-align: center;
  color: #172b4d;
}

.social-button > ul {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.social-button > ul > li {
  padding: 24px;
}

/* portfolio section style */
.inner-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 80px 0;
}

.section-title {
  font-family:

    Inter,
    sans-serif;
  font-size: 40px;
  font-weight: 700;
  font-style: normal;
  line-height: 52px;
  text-align: center;
  display: flex;
  align-items: center;
  color: #172b4d;
}

.section-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-auto-columns: auto;
  grid-auto-rows: auto;
  grid-gap: 20px;
  padding: 80px 0;
  width: 80%;
}

.section-card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border: 1px solid #d0d9d4;
  border-radius: 8px;
}

.card-image {
  width: 100%;
  height: 240px;
}

.section-card-title {
  padding: 12px 0;
  font-family:

    Poppins,
    sans-serif;
  font-style: normal;
  font-size: 24px;
  line-height: 32px;
  text-align: center;
  color: #172b4d;
}

.card-tags {
  padding: 0;
  margin: 0;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  row-gap: 16px;
  justify-content: center;
  align-items: center;
}

.tag-text {
  margin: 0 4px;
  padding: 8px;
  background-color: #ebf0ee;
  border-radius: 4px;
  font-family:

    Inter,
    sans-serif;
  font-size: 12px;
  font-weight: 600;
  font-style: normal;
  line-height: 16px;
}

.section-btn {
  margin: 18px 0;
  width: auto;
  height: 48px;
  text-align: center;
  background-color: #36b37f;
  border: none;
  border-radius: 4px;
  font-family:

    Poppins,
    sans-serif;
  font-size: 17px;
  font-weight: 500;
  line-height: 24px;
  letter-spacing: 3%;
  color: #fff;
  transition: all 0.3s ease-in-out;
}

.section-btn:hover {
  background-color: #36b37f;
  box-shadow: 0 8px 16px #36b47d;
  transform: scale(1.1);
}

.section-btn:focus {
  background-color: #008552;
}

/* about me section style */
#about-section {
  background-image: url("https://i.postimg.cc/JndcP0NV/illustrationabout.png");
  background-repeat: no-repeat;
  background-position: top;
  background-size: contain;
}

.inner-section-text {
  padding: 24px 15%;
  font-family:
    Poppins,
    sans-serif;
  font-size: 20px;
  font-weight: 400;
  line-height: 32px;
  text-align: center;
  color: #42526e;
}

.about-card {
  padding-bottom: 48px;
  background-color: #ebf0ee;
}

.icon-holder {
  margin: 28px 0;
  padding: 10px;
  border-radius: 50%;
  background-color: #fff;
  text-align: center;
}

.about-tags {
  background-color: #fff;
  color: #36b37e;
}

/* contact section style */
.form-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.contact-intro-text {
  font-family:
    Inter,
    sans-serif;
  font-style: normal;
  font-weight: 900;
  font-size: 40px;
  line-height: 52px;
  text-align: center;
  color: #172b4d;
  padding: 0 15%;
  margin: 24px 0;
}

form {
  display: flex;
  flex-direction: column;
  align-items: center;
}

input {
  margin: 15px 0;
  height: 48px;
  width: 327px;
  border: 1px solid #60c095;
  box-sizing: border-box;
  border-radius: 4px;
}

textarea {
  border: 1px solid #60c095;
  box-sizing: border-box;
  border-radius: 4px;
  width: 327px;
}

.footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

/* media query style */

/* Tablet screen */
@media only screen and (max-width: 1025px) {
  .section-grid {
    grid-template-columns: repeat(2, 2fr);
  }

  input,
  textarea {
    width: 684px;
  }
}

/* phone screen */
@media only screen and (max-width: 768px) {
  .menu-icon {
    visibility: visible;
  }

  .menu {
    visibility: hidden;
  }

  .section-grid {
    grid-template-columns: repeat(1, 1fr);
  }

  input,
  textarea {
    width: 327px;
  }
}

@media only screen and (min-width: 1021px) {
  .form-container {
    flex-direction: row;
    justify-content: center;
    align-items: flex-start;
    width: 1171px;
    height: 490px;
    left: 135px;
  }

  .contact-intro {
    position: static;
    width: 463px;
    height: 256px;
    left: 0;
    top: 0;
  }

  .contact-intro-text {
    font-weight: 700;
    font-size: 30px;
  }

  input,
  textarea {
    width: 684px;
  }

  form {
    align-items: flex-start;
  }
}

